2019-02-11: Fixed: Limit the number of InfoBox lines and MessageBox lines to 7 (which is the maximum number of lines that can be displayed)
            Fixed: FMUC_FreeFontFile() closed a font file even if the file handle was invalid due to an open error
            Fixed: FMUC_GetGlyphData() sought for glyphs even if the file handle was invalid due to an open or header error
2019-02-18: Fixed: OSDMenuPush() and OSDMenuPop() missed to set OSDDirty
2019-02-19: Fixed: Improved several flash structs and helper functions. Thanks to chris86
2019-02-20: Fixed: Modified FlashServiceFindNum() so that it will find services even if a transponder occupies more than one transponder entry (e.g. 1MHz offset)
2019-02-21: Fixed: The title area has never been erased if marked dirty
            Fixed: The logo area has never been erased if marked dirty
2019-02-22: Added: DO_SYNC and NO_SYNC - human-friendly arguments to OSDMenuUpdate()
            Fixed: OSDMenuGetW() and OSDMenuPutS() could not handle all sizes of the standard fonts (new: use size + 0xB for bold fonts)
            Added: OSDMenuGetH() to get a string's height
            Added: OSDMenuGetW(), OSDMenuGetH() and OSDMenuPutS() made public (i.e. part of the API)
            Fixed: OSDDrawList() limited the width of the name even without value arrows and a value itself
            Fixed: OSDDrawScrollBar() didn't take into account the different number of lines of the two OSDMenuDisplayModes
            Added: OSDMenuItemModifyNameColor() to change the color of the name separately from the color of the item line
            Added: OSDMenuItemModifyValueLeftArrowGap() to be able to control the distance between name and value
            Added: OSDMenuSetMemo() to be able to initialize and control an OSDMemo from scratch
            Added: OMDM_Text - an OSDMemo that won't scoll beyond its last line