@@ -1090,3 +1090,4 @@ The following functions accept any form a path. The INI and language INI functio
             Added: OSDMenuItemModifyValueLeftArrowGap() to be able to control the distance between name and value
             Added: OSDMenuSetMemo() to be able to initialize and control an OSDMemo from scratch
             Added: OMDM_Text - an OSDMemo that won't scoll beyond its last line
+            Modified: OSDMenuSetMemo() can either set OMDM_Memo or OMDM_Text now
